@@ -27,6 +27,7 @@ Now
   - Optimize IF with TRUE branch equal to FALSE branch.
   - Add configurable MUTATUION-RATE-PERCENT parameter.
   - Multithread examine.
+  - Fix world if individual position was not read.
 
 Version 0.0.5 2012-09-05
  - Support for C++0x (GCC 4.5.3)
